--- a/frontend/CycList/src/styles.scss
+++ b/frontend/CycList/src/styles.scss
@@ -7,24 +7,40 @@
 /*****************/
 
 // Automatic Darkmode and Lightmode with system settings:
-
 // light mode
-:root {
+#root.auto, #root.auto * {
   --fg-alt: white; //$color-white;
   --bg-alt: #eaebef;
   --bg: #f1f3f6; //$color-light;
   --fg: #313443;  //$color-darker;
   // --variant: 'light';
 }
-// dark mode
+
 @media (prefers-color-scheme: dark) {
-  :root {
+// dark mode
+#root.auto, #root.auto * {
     --fg-alt: #3f4252; //$color-dark;
     --bg-alt: #373949;
     --bg: #313443; //$color-darker;
     --fg: #acaeb8; //$color-light;
     // --variant: 'dark';
   }
+}
+
+// manual mode overrides
+#root.dark, #root.dark * {
+  --fg-alt: #3f4252; //$color-dark;
+  --bg-alt: #373949;
+  --bg: #313443; //$color-darker;
+  --fg: #acaeb8; //$color-light;
+  // --variant: 'dark';
+}
+#root.light, #root.light * {
+  --fg-alt: white; //$color-white;
+  --bg-alt: #eaebef;
+  --bg: #f1f3f6; //$color-light;
+  --fg: #313443; //;  //$color-darker;
+  // --variant: 'light';
 }
 
 // $variant: var(--variant);
@@ -50,15 +66,18 @@ $color-darker: #313443;
 $color-dark: #3f4252;
 $color-grey: #808397;
 $color-lightgrey: #bcbeca;
-$color-grey-trans: #6a6d8027;
 $color-lightgrey-trans: #9a9cac09;
-$color-mediumgrey-trans: rgba(125, 125, 125, 0.069);
+$color-grey-trans: #888ba227;
+$color-mediumgrey-trans: #6f718227;
+$color-darkgrey-trans: #17181b27;
 $color-white: white;
 $color-light: #f1f3f6;
 $color-ui-blue: rgb(18, 95, 202);
 $color-ui-medblue: rgb(110, 161, 233);
 $color-ui-lightblue: rgb(168, 197, 237);
 $color-ui-green: rgb(18, 202, 165);
+
+$color-input: #77788312;
 
 $color-red: #ff979782;
 $color-red-trans: transparentize($color-red, 0.18);
@@ -107,6 +126,10 @@ $pd-side-bar: 1em;
   border-radius: 0.2em;
   width: 0.4em;
   height: 0.4em;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: rgba(131, 131, 131, 0.043);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -173,16 +196,29 @@ html, body {
   right: 0;
   top: 0;
   bottom: 0;
+  overflow: hidden;
+}
+
+#root {
   background-color: $bg;
   color: $fg;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   overflow: hidden;
 }
 
 .btn {
   // user-select: none;
+  border-radius: $radius-btn;
   transition: all 0.2s;
   box-shadow: $shadow-medium;
   user-select: none;
+  margin: 0 0.2em;
 
   &:hover {
     transform: translateY(-1);
@@ -210,6 +246,24 @@ html, body {
       color: $bg;
     }
   }
+
+  &.flat {
+    background-color: $color-mediumgrey-trans;
+    box-shadow: none;
+
+    &:hover {
+      background-color: $color-grey-trans;
+    }
+    &:active {
+      background-color: $color-darkgrey-trans;
+    }
+  }
+}
+
+img {
+  width: 1em;
+  height: 1em;
+  padding: 0.5em;
 }
 
 input,
@@ -223,7 +277,7 @@ select {
   border: 2px solid transparent;
   margin: 0.2em;
   /* width: 100; */
-  background-color: $color-mediumgrey-trans;
+  background-color: $color-input;
   // box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.04);
   font-size: small;
   
